[package]
name = "cyphal-model-montecarlo"
version = "0.1.0"
edition = "2024"

[[bin]]
# cargo run --release --bin topic_allocation_montecarlo
name = "topic_allocation_montecarlo"
path = "topic_allocation_montecarlo.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
